Fix actions alignment

--- a/app/assets/stylesheets/_task.sass
+++ b/app/assets/stylesheets/_task.sass
@@ -19,6 +19,7 @@
       float: right
       letter-spacing: 7px
       display: none
+      margin-top: 4px
 
       & > span
         cursor: pointer
